<resources>
    <string name="app_name">Eye of Pokemon Go</string>

    <string name="start_eye_text">Start Eye of Pokemon Go every</string>
    <string name="minutes">minute(s)</string>
    <string name="only_online">Only Online</string>
    <string name="online_unstable">Online and Unstable</string>
    <string name="start">Start Eye of Pokemon Go</string>
    <string name="current_state">Current State of Server</string>
    <string name="google_account">Google Account</string>
    <string name="trainer_account">Pokemon Trainer Club Account</string>
    <string name="check">CHECK !</string>
    <string name="started">Eye of Pokemon Go started !</string>
    <string name="name">Eye of Pokemon Go</string>
    <string name="you_can_play">Now You can Play Pokemon Go !</string>
    <!--<string name="banner_ad_unit_id_1">ca-app-pub-5403338283729031/6884082105</string>-->
    <!--<string name="banner_ad_unit_id_2">ca-app-pub-5403338283729031/7802412103</string>-->
    <!--<string name="interstitial1">ca-app-pub-5403338283729031/4042230103</string>-->
    <!--<string name="interstitial2">ca-app-pub-5403338283729031/5910631303</string>-->
    <string name="banner_ad_unit_id_1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="newImg">new</string>
    <string name="pokemon_go_evolution_calculator">Pokemon GO Evolution Calculator</string>
</resources>