<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#37474f"
    tools:context="com.ozhan.mustafa.pokemongoeye.activities.MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startPokemonGoEye"
        android:layout_centerHorizontal="true"
        android:text="@string/current_state"
        android:textColor="#b2dfdb"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_below="@+id/textView"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/radioGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/google_account"
            android:textColor="#b2dfdb" />

        <RadioButton
            android:id="@+id/radioTrainerClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/trainer_account"
            android:textColor="#b2dfdb" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/check" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/adView_3"
        android:layout_below="@+id/adView_3"
        android:layout_marginTop="19dp"
        android:text="@string/start_eye_text"
        android:textColor="#b2dfdb" />

    <EditText
        android:id="@+id/howManyMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adView_3"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@id/howManyMinutes"
        android:textAlignment="center"
        android:textColor="#b2dfdb" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/adView_3"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/minutes"
        android:textColor="#b2dfdb" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howManyMinutes"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radioOnlyOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/only_online"
            android:textColor="#b2dfdb" />

        <RadioButton
            android:id="@+id/radioOnlineAndUnstable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/online_unstable"
            android:textColor="#b2dfdb" />
    </RadioGroup>

    <Button
        android:id="@+id/startPokemonGoEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/adView_1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/calculator"
        android:layout_toStartOf="@+id/calculator"
        android:background="@drawable/asd"
        android:contentDescription="@string/newImg" />

    <TextView
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:text="@string/pokemon_go_evolution_calculator"
        android:textColor="#80cbc4"
        android:textSize="18sp" />

</RelativeLayout>
